Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/026_function_missing_return_ifelse.xi
f(x:bool):int
{
    if (x) {
    } else {
    }
}
//@PRACOWNIA
//@should_not_typecheck
